--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +15,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.video-container {
+  position: relative;
+  margin-left: 50px;
+  margin-bottom: 30px; /* 或者您想要的任何間距 */
+}
+
+.controls-container {
+  position: absolute;
+  bottom: 0;
+  right: 120px; 
+} 
