--- a/src/index.css
+++ b/src/index.css
@@ -4,26 +4,43 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.container {
+  display: flex;
+}
+
+.fixed-content {
+  width: 282px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  overflow-y: auto;
+}
+
+.scrollable-content {
+  flex-grow: 1;
+  margin-left: 282px;
+  overflow-y: auto;
 }
 
 .video-container {
   position: relative;
   margin-left: 50px;
-  margin-bottom: 30px; /* 或者您想要的任何間距 */
+  margin-bottom: 30px; 
 }
 
 .controls-container {
   position: absolute;
   bottom: 0;
-  right: 120px; 
-} 
+  right: 420px;
+}
